cabal-version:          3.4
name:                   w03
version:                0.1
build-type:             Simple
extra-source-files:     README.md
                      , fact5.stack

common common
  build-depends:        base ^>= 4.16.4.0
  ghc-options:          -Wall

library
  import:               common
  hs-source-dirs:       src
  Exposed-Modules:      W0301
                      , W0302
                      , W0303
                      , W0304
  build-depends:        megaparsec
                      , QuickCheck
                      , void

test-suite w03-doctests
  import:               common
  type:                 exitcode-stdio-1.0
  main-is:              doctests.hs
  build-depends:        doctest
                      , template-haskell
  ghc-options:          -threaded
  hs-source-dirs:       doctest
